# senuhas-ADBMS

./: .gitignore  README.md  app.py  database.py  db_config.py  pyproject.toml  queries.py  requirements.txt  structure.txt
.streamlit/: config.toml
db/: init_db.py
db/data/: sample_data.sql
db/schema/: create_tables_mysql.sql  functions_mysql.sql  procedures_mysql.sql  triggers_mysql.sql  views_mysql.sql
pages/: Basic_Forecasting.py  Dashboard.py  Database_Explorer.py  Sales_Trends.py
